MeCab の設定を変更したのを Docker にも反映。

--- a/coder.ini
+++ b/coder.ini
@@ -25,7 +25,7 @@ r_plot_debug	0
 sqllog	
 sql_username	khcoder
 sql_password	khcoder
-sql_host	172.29.0.2
+sql_host	mysql
 sql_port	3306
 sql_type	TCP/IP
 sql_socket	MySQL
