--- a/coder.ini
+++ b/coder.ini
@@ -25,8 +25,8 @@ r_plot_debug	0
 sqllog	
 sql_username	khcoder
 sql_password	khcoder
-sql_host	mysql
-sql_port	3306
+sql_host	0.0.0.0
+sql_port	13306
 sql_type	TCP/IP
 sql_socket	MySQL
 multi_threads	0
