--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,12 @@ services:
   nl2e:
     image: 'sinby/nl2e:v0.1'
     environment:
-        DISPLAY: $DISPLAY
+        DISPLAY: host.docker.internal:0
     depends_on:
         - mysql
     volumes:
       - './KHCoder:/KHCoder'
       - '$HOME/.Xauthority:/root/.Xauthority'
-    network_mode: "host"
   mysql:
     image: 'sinby/mysql-for-khcoder:8.0.27'
     cap_add:
