fix mysql setting

--- a/coder.ini
+++ b/coder.ini
@@ -1,15 +1,15 @@
-chasenrc_path	
-grammarcha_path	
+chasenrc_path
+grammarcha_path
 mecab_unicode	utf-8
 mecabrc_path	/etc/mecabrc
-stanf_jar_path	
-stanf_tagger_path_en	
-stanf_tagger_path_cn	
-stanf_seg_path	
+stanf_jar_path
+stanf_tagger_path_en
+stanf_tagger_path_cn
+stanf_seg_path
 stanford_port	32020
 stanford_ram	2g
-han_dic_path	
-freeling_dir	
+han_dic_path
+freeling_dir
 freeling_port	32021
 freeling_lang	en
 stanford_lang	en
@@ -20,24 +20,24 @@ c_or_j	mecab
 unify_words_with_same_lemma	0
 msg_lang	jp
 msg_lang_set	jp
-r_path	
+r_path
 r_plot_debug	0
-sqllog	
-sql_username	khcoder
+sqllog
+sql_username	root
 sql_password	khcoder
-sql_host	0.0.0.0
-sql_port	13306
+sql_host	171.20.0.3
+sql_port	3306
 sql_type	TCP/IP
 sql_socket	MySQL
 multi_threads	0
 color_universal_design	1
-mail_if	
-mail_smtp	
-mail_from	
-mail_to	
+mail_if
+mail_smtp
+mail_from
+mail_to
 use_heap	1
 show_bars_wordlist	1
-all_in_one_pack	
+all_in_one_pack
 font_main	kochi gothic,10
 font_plot	IPAPGothic
 font_plot_cn	Droid Sans Fallback
