--- a/coder.ini
+++ b/coder.ini
@@ -1,6 +1,6 @@
 chasenrc_path	
 grammarcha_path	
-mecab_unicode	utf-8
+mecab_unicode	1
 mecabrc_path	/etc/mecabrc
 stanf_jar_path	
 stanf_tagger_path_en	
